zeit.cms changes
================

1.1.10 (unreleased)
-------------------

- Zuweisen von Keywords sorgte im FF3 für Fehler.

1.1.9 (2008-09-05)
------------------

- Die Größe und Skalierungsart (mit/ohne Boundingbox) der Thumbnails (für
  Bigas) ist jetzt konfigurierbar.
- Hit-Counter kommt jetzt besser mit Pfaden ala //index klar.
- XML-Editor: Styling-Fixes

1.1.8 (2008-08-28)
------------------

- Readonly-Ansicht für den Quelltext (Bug #4358).

1.1.7 (2008-08-26)
------------------

- Styling in  der Dateiliste korrigiert.

1.1.6 (2008-08-26)
------------------

- Asset-View: Read-Only-Ansicht zeigt jetzt die URL an, der Title wird als
  Tool-Tip angezeigt (bug #4219).
- Ressort muss jetzt vom Benutzer eingegeben werden, »Deutschland« ist nicht
  mehr vorausgewählt (bug #4387).
- Aussetzer um kurz nach Mitternacht behoben.
- Dateiliste zeigt mehr Informationen zum Workflow-Zustand.
- Widget zum referenzieren von Objekten zeigt Informationen zum
  Workflow-Zustand.

1.1.5 (2008-08-12)
------------------

- Links als Related Content fügen ihre Ziel-URL ins XML ein.
- Logs in Workflow-Ansicht werden auf die letzten 20 Einträge begrenzt.

1.1.4 (2008-08-06)
------------------

- WYSIWYG-Editor: Bilder, die nicht direkt unterhalb des <p> sind werden
  richtig in HTML konvertiert.

1.1.3 (2008-08-06)
------------------

- Korrektes Übersetzen des View-Titels.

1.1.2 (2008-08-04)
------------------

- Import der Vortagszugriffszahlen in mehreren Transaktionen.

1.1.1 (2008-08-01)
------------------

- Import der Vortagszugriffszahlen jetzt mit explizitem Locking. Zudem besseres
  Verhalten bei ungültigen Pfaden.

1.1 (2008-08-01)
----------------

- WYSIWYG-Editor kommt besser mit beliebigen ``article_extra``-Tags klar (bug
  #4442).
- Importieren und Speichern der Vortagszugriffszahlen.

1.0 (2008-07-29)
----------------

- Checkout/checkin während des Veröffentlichungsvorgangs funktioniert wieder